--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,21 +13,8 @@ body{
     letter-spacing: 1px;
 }
 
-.custom-background{
-    background-image: url(img/deca-dence-background.jpg);
-    background-size:cover;
-    top: 0;
-    left: 0;
-    z-index: -100;
-    visibility: visible;
-    height: 100vh;
-    width: 100vw;
-}
-
 .row{
-    max-width: 1600px;
     margin: 0 auto;
-    display: flex;
     justify-content: space-around;
     background-color: #fafafa;
 }
@@ -44,14 +31,15 @@ body{
     flex-direction: column;
     justify-content: center;
 }
+
 .display-1{
     text-align: center;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 .header .h5{
-    display: block;
     max-width: 1050px;
+    padding: 25px;
     align-self: center;
     text-align: center;
     font-family: 'Lato', 'Ariel', sans-serif;
